# swr-playground

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: application.cpp  application.h  class_info.h  class_registry.cpp  class_registry.h  framebuffer.cpp  framebuffer.h  imgui.cpp  imgui.h  main.cpp  mesh.h  platform.cpp  platform.h  property.cpp  property.h  renderdevice.cpp  renderdevice.h  renderer.cpp  renderer.h  shader.h  shader_cache.h  utils.h  viewport.h
src/reflection/: builtin_properties.cpp  builtin_properties.h  class_info.h  class_registry.cpp  class_registry.h  except.h  flags.h  property.cpp  property.h  traits.h
src/scene/: camera.h  class_info.h  class_registry.cpp  class_registry.h  gear.cpp  gear.h  light.h  object.cpp  object.h  property.cpp  property.h  scene.cpp  scene.h
